grafana/ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-public
  namespace: grafana
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: grafana-public.yhmd.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
